fix test build errors