@@ -21,7 +21,20 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.jacoco</groupId>
+          <groupId>org.graalvm.buildtools</groupId>
+          <artifactId>native-maven-plugin</artifactId>
+          <configuration>
+            <buildArgs>
+              <buildArg>--add-opens=java.base/java.nio=ALL-UNNAMED</buildArg>
+              <buildArg>--initialize-at-build-time=org.apache.arrow.memory.BaseAllocator</buildArg>
+              <buildArg>--initialize-at-build-time=org.apache.arrow.memory.BaseAllocator$Config</buildArg>
+              <buildArg>--initialize-at-build-time=org.apache.arrow.memory.DefaultAllocationManagerOption</buildArg>
+              <buildArg>--initialize-at-build-time=org.apache.arrow.memory.netty.NettyAllocationManager$1</buildArg>
+            </buildArgs>
+          </configuration>
+        </plugin>
+        <plugin>
+        <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>0.8.12</version>
           <executions>
